# dtermine-cli

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAIMS.md  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
schemas/: result.schema.json
src/determinism_audit/: __init__.py  cli.py  config.py  metrics.py  provider_map.json  result.py  runner.py
src/determinism_audit/canary/: __init__.py  loader.py  prompts.jsonl  schema.py
src/determinism_audit/report/: json_writer.py
src/determinism_audit/scorers/: __init__.py  exact.py  semantic.py  structural.py
tests/: test_canary_loader.py  test_config.py  test_metrics.py  test_result_schema.py  test_scorers_exact.py  test_scorers_semantic.py  test_scorers_structural.py
